--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-bearer-token": "^2.4.0",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "per-env": "^1.0.2",
