--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
     "express-validator": "^6.6.1",
+    "faker": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "per-env": "^1.0.2",
     "pg": "^8.4.1",
