--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.782.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -19,6 +20,7 @@
     "express-validator": "^6.6.1",
     "faker": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "per-env": "^1.0.2",
     "pg": "^8.4.1",
     "sequelize": "^5.22.3"
